--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "express": "4.17.1",
         "mongodb": "3.5.5",
-        "nodemon": "^2.0.3"
+        "nodemon": "^2.0.3",
+        "formidable": "1.2.2"
     }
 }
