--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "express": "4.17.1",
+    "formidable": "1.2.2",
+    "mongodb": "3.5.7",
     "sirv-cli": "^0.4.4",
     "svelte-icons": "^2.1.0",
-    "express": "4.17.1",
-    "mongodb": "3.5.7",
-    "formidable": "1.2.2"
+    "svelte-routing": "^1.4.2"
   }
 }
